# hierarchical-classification

./: .gitignore  LICENSE.md  README.md  llms-full.txt  llms.txt  main.py  pyproject.toml
benchmarks/: __init__.py  pathfinding_benchmark.py  pathfinding_compare.py
notebooks/: custom_classifier.py  sklearn_integration.py
src/: __init__.py  classifier.py  models.py  scoring.py  serialization.py
src/integrations/: __init__.py  huggingface.py  llm.py  sklearn.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_classifier.py  test_integrations_huggingface.py  test_integrations_llm.py  test_integrations_sklearn.py  test_models.py  test_scoring.py  test_serialization.py
tests/unit/integrations/: test_huggingface.py  test_llm.py  test_sklearn.py
