[project]
name = "hierarchical-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "attrs>=26.1.0",
    "numpy>=2.4.4",
    "orjson>=3.11.8",
]

[project.optional-dependencies]
sklearn = ["scikit-learn>=1.0"]
huggingface = ["transformers>=4.0"]
llm = ["litellm>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-anyio",
    "scikit-learn>=1.0",
]
